# pyts

./: .codecov.yml  .coveragerc  .gitignore  .pep8speaks.yml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  api.html  approximation.html  appveyor.yml  azure-pipelines.yml  bow.html  citation.html  classification.html  decomposition.html  environment.yml  genindex.html  image.html  index.html  install.html  objects.inv  preprocessing.html  py-modindex.html  quantization.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  transformation.html  user_guide.html  utils.html
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
_downloads/: plot_boss.ipynb  plot_bossvs.ipynb  plot_bossvs.py  plot_bow.ipynb  plot_classifiers.ipynb  plot_dft.ipynb  plot_dtw.ipynb  plot_fastdtw.ipynb  plot_fastdtw.py  plot_gaf.ipynb  plot_mcb.ipynb  plot_mcb.py  plot_mtf.ipynb  plot_mtf.py  plot_paa.ipynb  plot_paa.py  plot_rp.ipynb  plot_sax.ipynb  plot_saxvsm.ipynb  plot_ssa.ipynb  plot_ssa.py  plot_ts.ipynb  plot_weasel.ipynb
_modules/: index.html
_sources/: bow.rst.txt  decomposition.rst.txt  image.rst.txt  index.rst.txt  preprocessing.rst.txt  quantization.rst.txt  transformation.rst.txt  user_guide.rst.txt
_static/: documentation_options.js
auto_examples/: index.html  plot_boss.html  plot_bossvs.html  plot_bow.html  plot_classifiers.html  plot_dft.html  plot_dtw.html  plot_fastdtw.html  plot_gaf.html  plot_mcb.html  plot_mtf.html  plot_paa.html  plot_rp.html  plot_sax.html  plot_saxvsm.html  plot_ssa.html  plot_ts.html  (+1 more)
(+263 files in other folders)
