[metadata]
description-file = README.md

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules

filterwarnings =
    ignore:the matrix subclass:PendingDeprecationWarning
    ignore:Using or importing the ABCs from:DeprecationWarning

[flake8]
# Default flake8 3.5 ignored flags
ignore=E121,E123,E126,E226,E24,E704,W503,W504
